--- a/src/main/resources/templates/hello.mustache
+++ b/src/main/resources/templates/hello.mustache
@@ -9,8 +9,10 @@
 <div class="col-md-12">
     <div class="row">
         <div class="col-md-6">
-            <a href="/main/map" role="button" class="btn btn-primary">지도 보기</a>
-            <h1>{{title}}</h1>
+            <a href="/kakao/map" role="button" class="btn btn-primary">지도 보기</a>
+        </div>
+        <div class="col-md-6">
+            <a href="/kakao/search" role="button" class="btn btn-primary">검색</a>
         </div>
     </div>
 </div>
